--- a/scss/index.scss
+++ b/scss/index.scss
@@ -284,7 +284,7 @@ body{
                         }
                         &.fadelinks{
                             visibility: visible;
-                            animation: fadelinks 1.5s ease-in-out;
+                            animation: fadelinks 1.5s cubic-bezier(.2,1,.59,1);
                             @keyframes fadelinks {
                                 0%{
                                     opacity: 0;
@@ -298,7 +298,7 @@ body{
                         }
                         &.fademidden{
                             visibility: visible;
-                            animation: faderechts 2s ease-in-out;
+                            animation: faderechts 2s cubic-bezier(.2,1,.59,1);
                             @keyframes faderechts {
                                 0%{
                                     opacity: 0;
@@ -312,7 +312,7 @@ body{
                         }
                         &.faderechts{
                             visibility: visible;
-                            animation: faderechts 2.5s ease-in-out;
+                            animation: faderechts 2.5s cubic-bezier(.2,1,.59,1);
                             @keyframes faderechts {
                                 0%{
                                     opacity: 0;
@@ -327,7 +327,6 @@ body{
                     }
                 }
                 .row-overping-info{
-
                     button{}
                 }
                 .cloud4{
