--- a/scss/product.scss
+++ b/scss/product.scss
@@ -28,6 +28,10 @@ body{
           .koopnu{
             margin-left: 1vh;
             }
+            @media only screen and (max-width: 768px){
+              justify-content: center;
+              display: flex;
+          }
           }
         }
         .rechterkolom{
@@ -36,6 +40,9 @@ body{
             width: 100%;
             margin-left: 100px;
             margin-top: 100px;
+            @media only screen and (max-width: 768px){
+              visibility: hidden;
+          }
            
           }
           .cloud7{
@@ -43,14 +50,17 @@ body{
             width: 100%;
             top:300px;
             left: 200px;
-            
-            
+            @media only screen and (max-width: 768px){
+              visibility: hidden;
+          }
           }
           .bandje{
             position: absolute;
             width: 100%;
             left: 350px;
-            
+            @media only screen and (max-width: 768px){
+              visibility: hidden;
+          }
           }
         }
     
