--- a/scss/over_ons.css
+++ b/scss/over_ons.css
@@ -259,18 +259,27 @@ body .fullpage footer .column3-footer .column3-footer-info .info a {
   color: #fdfffc;
 }
 
-body .fullpage {
-  /*
-        .uber-main-container{
-            overflow-x: hidden;
-            background-image: url(../Images/globeGroot.png);
-            background-size: 100vw 90vh;
-            background-repeat: no-repeat;
-            .wereldbol{
-                top: 200px;
-                left: 1250px;
-            }
-            */
+body .fullpage .uber-main-container {
+  overflow-x: hidden;
+}
+
+body .fullpage .uber-main-container .wereldbol {
+  top: 200px;
+  left: 800px;
+}
+
+@media only screen and (max-width: 1100px) {
+  body .fullpage .uber-main-container .wereldbol {
+    top: 400px;
+    left: 400px;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  body .fullpage .uber-main-container .wereldbol {
+    top: 110px;
+    left: 150px;
+  }
 }
 
 body .fullpage main {
@@ -314,7 +323,7 @@ body .fullpage main .color-even-ani {
   }
 }
 
-body .fullpage main .color-odd-ani {
+body .fullpage main .color-even-ani .color-odd-ani {
   width: 98%;
   height: 60px;
   background-color: #2ec4b6;
@@ -326,7 +335,7 @@ body .fullpage main .color-odd-ani {
 }
 
 @media only screen and (max-width: 768px) {
-  body .fullpage main .color-odd-ani {
+  body .fullpage main .color-even-ani .color-odd-ani {
     display: none;
   }
 }
@@ -349,7 +358,7 @@ body .fullpage main .color-odd-ani {
   }
 }
 
-body .fullpage main .row .column-header {
+body .fullpage main .color-even-ani .row .column-header {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -361,60 +370,60 @@ body .fullpage main .row .column-header {
           justify-content: center;
 }
 
-body .fullpage main .row .column-header .header-text {
+body .fullpage main .color-even-ani .row .column-header .header-text {
   font-size: 4.6875rem;
 }
 
-body .fullpage main .row .column-header h4 {
+body .fullpage main .color-even-ani .row .column-header h4 {
   font-family: proxima-soft, sans-serif;
 }
 
-body .fullpage main .row .column-content {
+body .fullpage main .color-even-ani .row .column-content {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   overflow: hidden;
 }
 
 @media only screen and (max-width: 768px) {
-  body .fullpage main .row .column-content .text-md-right {
+  body .fullpage main .color-even-ani .row .column-content .text-md-right {
     background-color: #ff9f1c;
   }
 }
 
 @media only screen and (max-width: 768px) {
-  body .fullpage main .row .column-content .text-md-left {
+  body .fullpage main .color-even-ani .row .column-content .text-md-left {
     background-color: #2ec4b6;
   }
 }
 
-body .fullpage main .row .column-content h1 {
+body .fullpage main .color-even-ani .row .column-content h1 {
   font-family: proxima-soft, sans-serif;
   font-size: 3.125rem;
 }
 
-body .fullpage main .row .column-content h1 h4 {
+body .fullpage main .color-even-ani .row .column-content h1 h4 {
   font-family: proxima-soft, sans-serif;
   font-size: 130px;
 }
 
-body .fullpage main .row .column-content p {
+body .fullpage main .color-even-ani .row .column-content p {
   font-family: proxima-soft, sans-serif;
   font-size: 1rem;
 }
 
 @media only screen and (max-width: 768px) {
-  body .fullpage main .row .column-content {
+  body .fullpage main .color-even-ani .row .column-content {
     -webkit-box-ordinal-group: 2;
         -ms-flex-order: 1;
             order: 1;
   }
 }
 
-body .fullpage main .row .column-picture {
+body .fullpage main .color-even-ani .row .column-picture {
   height: 100%;
 }
 
-body .fullpage main .row .column-picture:nth-child(even) {
+body .fullpage main .color-even-ani .row .column-picture:nth-child(even) {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
