--- a/scss/over_ons.scss
+++ b/scss/over_ons.scss
@@ -7,17 +7,21 @@
 body{
     .fullpage{
         @extend %navigation;
-        /*
         .uber-main-container{
             overflow-x: hidden;
-            background-image: url(../Images/globeGroot.png);
-            background-size: 100vw 90vh;
-            background-repeat: no-repeat;
             .wereldbol{
                 top: 200px;
-                left: 1250px;
+                left: 800px;
+                @media only screen and(max-width: 1100px) {
+                    top: 400px;
+                    left: 400px;
+                }
+                @media only screen and(max-width: 768px) {
+                    top: 110px;
+                    left: 150px;
+                }
             }
-            */
+        }
         main{
             margin-top: 8vh;
             position: relative;
@@ -41,7 +45,7 @@ body{
                         margin-left: 0px;
                     }
                 }
-            }
+            
             .color-odd-ani{
                 width: 98%;
                 height: 60px;
@@ -79,6 +83,7 @@ body{
                     }
                     
                 }
+
                 
                 .column-content{
                     box-sizing: border-box;
@@ -123,6 +128,7 @@ body{
                 }
             }
         }
+    }
         @extend %footer;
     }
 }
