--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -39,6 +39,9 @@
         font-family: $headerFont;
         font-size: $headerFontSize;
     }
+    h4{
+        font-family: $bodyFont;
+    }
     box-sizing: border-box;
 }
 
