--- a/scss/over_ons.css
+++ b/scss/over_ons.css
@@ -409,7 +409,7 @@ body .fullpage main .row .column-content h1 {
 
 body .fullpage main .row .column-content h1 h4 {
   font-family: proxima-soft, sans-serif;
-  font-size: 130px;
+  font-size: 1.5rem;
 }
 
 body .fullpage main .row .column-content p {
