--- a/scss/over_ons.scss
+++ b/scss/over_ons.scss
@@ -104,7 +104,8 @@ body{
                     font-size:$headerFontSize;
                     h4{
                         font-family: $bodyFont;
-                        font-size:130px;
+                        font-size:1.5rem;
+                        
                     }
                     }
                     p{
