--- a/scss/over_ons.css
+++ b/scss/over_ons.css
@@ -281,8 +281,8 @@ body .fullpage .uber-main-container .wereldbol {
 
 @media only screen and (max-width: 768px) {
   body .fullpage .uber-main-container .wereldbol {
-    top: 100px;
-    left: 200px;
+    top: 90px;
+    left: 150px;
   }
 }
 
@@ -374,18 +374,29 @@ body .fullpage main .row .column-header {
           justify-content: center;
 }
 
+body .fullpage main .row .column-header .topparagraaf {
+  font-size: 1.2rem;
+}
+
 body .fullpage main .row .column-header .header-text {
   font-size: 4.6875rem;
 }
 
 body .fullpage main .row .column-header h4 {
   font-family: proxima-soft, sans-serif;
+  font-weight: 400;
 }
 
 body .fullpage main .row .column-content {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   overflow: hidden;
+}
+
+body .fullpage main .row .column-content h6 {
+  font-family: proxima-soft, sans-serif;
+  font-size: 1.2rem;
+  font-weight: 800;
 }
 
 @media only screen and (max-width: 768px) {
@@ -416,6 +427,12 @@ body .fullpage main .row .column-content p {
   font-family: proxima-soft, sans-serif;
   font-size: 1rem;
   padding-top: 50px;
+}
+
+@media only screen and (max-width: 576px) {
+  body .fullpage main .row .column-content p {
+    padding-top: 0;
+  }
 }
 
 @media only screen and (max-width: 768px) {
