--- a/scss/index.scss
+++ b/scss/index.scss
@@ -250,7 +250,10 @@ body{
                             ul{
                                 li{}
                             }
-                            button{}
+                            img{
+                                max-width: 130px;
+                                min-height: 50px;
+                            }
                         }
                     }
                     .cloud3{
