--- a/scss/product.scss
+++ b/scss/product.scss
@@ -190,7 +190,6 @@ body{
           font-size: 16px;
           color: #011627;
         }
-      
       }
       .tekst-scherm2{
         color: #011627;
@@ -210,6 +209,10 @@ body{
             color: #011627;
           }
         .download{
+          img{
+            min-height: 50px;
+            max-width: 130px;
+          }
           @media only screen and (max-width: 768px){
             justify-content: center;
             display: flex;
