--- a/scss/index.scss
+++ b/scss/index.scss
@@ -330,7 +330,9 @@ body{
                     }
                 }
                 .row-overping-info{
-                    button{}
+                    .btn{
+                        margin-left: 15px;
+                    }
                 }
                 .cloud4{
                     z-index: -1;
