--- a/scss/index.css
+++ b/scss/index.css
@@ -780,6 +780,10 @@ body .fullpage main .row-overping .row-overping-tekstblokken .team-focus-missie.
   }
 }
 
+body .fullpage main .row-overping .row-overping-info .btn {
+  margin-left: 15px;
+}
+
 body .fullpage main .row-overping .cloud4 {
   z-index: -1;
   top: -100px;
