--- a/scss/winkelmandje.css
+++ b/scss/winkelmandje.css
@@ -265,7 +265,7 @@ body .fullpage footer .column3-footer .column3-footer-info .info a {
 
 body .fullpage main {
   margin-top: 8vh;
-  height: 92vh;
+  min-height: 92vh;
 }
 
 @media only screen and (max-width: 768px) {
@@ -306,6 +306,24 @@ body .fullpage main .winkelmandje .winkelmandje-details .winkelmandje-details-bo
 
 body .fullpage main .winkelmandje .winkelmandje-details .winkelmandje-details-box .winkelmandje-details-box-info {
   font-family: proxima-soft, sans-serif;
+  position: relative;
+}
+
+body .fullpage main .winkelmandje .winkelmandje-details .winkelmandje-details-box .winkelmandje-details-box-info .emptystatediv {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+body .fullpage main .winkelmandje .winkelmandje-details .winkelmandje-details-box .winkelmandje-details-box-info .emptystatediv img {
+  max-height: 100px;
 }
 
 body .fullpage main .winkelmandje .winkelmandje-details .winkelmandje-details-box .winkelmandje-details-box-info .winkelmandje-details-box-info-details {
@@ -351,6 +369,7 @@ body .fullpage main .winkelmandje .winkelmandje-details .winkelmandje-details-bo
 
 body .fullpage main .winkelmandje .winkelmandje-betalen .winkelmandje-betalen-box {
   border-radius: 5px;
+  min-height: 500px;
   background-color: #DEEFED;
 }
 
@@ -360,6 +379,25 @@ body .fullpage main .winkelmandje .winkelmandje-betalen .winkelmandje-betalen-bo
 
 body .fullpage main .winkelmandje .winkelmandje-betalen .winkelmandje-betalen-box .winkelmandje-betalen-promotie {
   border-bottom: 1px solid #011627;
+  position: relative;
+}
+
+body .fullpage main .winkelmandje .winkelmandje-betalen .winkelmandje-betalen-box .winkelmandje-betalen-promotie div {
+  height: 30px;
+  border-radius: 5px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  visibility: hidden;
+  position: absolute;
+}
+
+body .fullpage main .winkelmandje .winkelmandje-betalen .winkelmandje-betalen-box .winkelmandje-betalen-promotie div p {
+  color: green;
+  padding-top: 2.5px;
 }
 
 body .fullpage main .winkelmandje .winkelmandje-betalen .winkelmandje-betalen-box .winkelmandje-betalen-aantal {
