update alle files en winkelmandje teller :)

--- a/scss/bestel.css
+++ b/scss/bestel.css
@@ -149,6 +149,7 @@ body .fullpage nav div {
 }
 
 body .fullpage nav div .navigation-list li a {
+  position: relative;
   padding: 0;
   color: #011627 !important;
 }
@@ -156,6 +157,27 @@ body .fullpage nav div .navigation-list li a {
 body .fullpage nav div .navigation-list li a ion-icon {
   color: #011627;
   font-size: 1.5625rem;
+}
+
+body .fullpage nav div .navigation-list li a .winkelmandje-aantal {
+  position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  top: 0px;
+  right: 20px;
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  background-color: #ff9f1c;
+  color: white;
+  font-size: 10px;
 }
 
 body .fullpage nav div .navigation-list li .active {
@@ -180,6 +202,9 @@ body .fullpage nav div .navigation-list li .active {
         -ms-flex-pack: center;
             justify-content: center;
     font-size: 25px;
+  }
+  body .fullpage nav div .navigation-list li a .winkelmandje-aantal, body .fullpage nav div .navigation-list li ion-icon .winkelmandje-aantal {
+    right: 32px;
   }
   body .fullpage nav div .navigation-list li:nth-child(5) {
     display: none;
