--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -119,11 +119,26 @@
             .navigation-list{
                 li{
                     a{
+                        position: relative;
                         padding: 0;
                         color: $primary1Color !important;
                         ion-icon{
                             color: $primary1Color;
                             font-size: $iconSize;
+                        }
+                        .winkelmandje-aantal{
+                            position: absolute;
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
+                            top: 0px;
+                            right: 20px;
+                            width: 16px;
+                            height: 16px;
+                            border-radius: 50%;
+                            background-color: #ff9f1c;
+                            color: white;
+                            font-size: 10px;
                         }
                     }
                     .active{
@@ -139,6 +154,9 @@
                             display: flex;
                             justify-content: center;
                             font-size: 25px;
+                            .winkelmandje-aantal{
+                                right: 32px;
+                            }
                         }
                         &:nth-child(5){
                             display: none;
